# ultimate-tracker

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DeveloperGuide.md  LICENSE  README.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  chore.yml  config.yml  feature_request.yml
.github/workflows/: backend-ci.yml  deploy.yml  frontend-ci.yml  pr-title.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3801687f937a_initial_profiles.py  4f91106140be_add_finance_domain_tables.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  finance.py  fitness.py  health.py  insights.py  steps.py  time_tracking.py  wellness.py
backend/app/core/: config.py  currencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  finance.py  profile.py
backend/app/schemas/: profile.py
backend/app/services/: exchange_rates.py  profile.py
backend/tests/: conftest.py  test_auth_me.py  test_exchange_rates.py  test_health.py  test_security.py
docs/adr/: 0001-decoupled-frontend-backend.md  template.md
frontend/: .env.example  .prettierignore  eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/steps/: page.tsx
frontend/lib/: api-client.ts  supabase.ts
frontend/tests/: api-client.test.ts
(+9 files in other folders)
